; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-slide.c_slide_video_render.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-slide.c_slide_video_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.slide_info = type { i32 }

@slide_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slide_video_render(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.slide_info*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.slide_info*
  store %struct.slide_info* %7, %struct.slide_info** %5, align 8
  %8 = load %struct.slide_info*, %struct.slide_info** %5, align 8
  %9 = getelementptr inbounds %struct.slide_info, %struct.slide_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @slide_callback, align 4
  %12 = call i32 @obs_transition_video_render(i32 %10, i32 %11)
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @UNUSED_PARAMETER(i32* %13)
  ret void
}

declare dso_local i32 @obs_transition_video_render(i32, i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
